trunk/Archive2/71/171c2fb9d1da1b/output
main.cpp: In function 'int main()':
main.cpp:15:6: error: use of deleted function 'B::B(const B&)'
    c = b;
      ^
main.cpp:5:5: error: declared here
     B(const B&) = delete;
     ^
main.cpp:6:8: error:   initializing argument 1 of 'B& B::operator=(B)'
     B& operator=(B) { return *this; };
        ^
